--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://unpkg.com/survey-jquery@1.8.40/modern.css" type="text/css" rel="stylesheet" />
 <script src="https://unpkg.com/survey-jquery@1.8.40/survey.jquery.min.js"></script>
-<title>Page Title</title>
+<title>Promotion Readiness Wheel</title>
 
 </head>
 <body>
